CHANGED: nearby featured banner ads were the wrong height. CHANGED: login/register component buttons were the wrong max width CHANGED: fix issue with bottom AD banner not alternating

--- a/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
+++ b/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
@@ -28,8 +28,6 @@
   position: relative;
   left: 0;
   right: 0;
-  min-width: 100%;
-  width: 100%;
   max-width: 100%;
   box-shadow: unset;
 }
@@ -93,12 +91,7 @@
   left: 0;
   right: 0;
   margin-left: 0;
-  min-height: 100%;
-  height: 100%;
-  max-height: 100%;
-  width: 100%;
-  max-width: 100%;
-  min-width: 100%;
+  max-height: 320px;
   background-repeat: no-repeat!important;
   background-size: cover!important;
   background-position: center!important;
@@ -146,7 +139,7 @@
     max-width: 100%;
     min-width: 100%;
     width: 100%;
-    right: 0%;
+    right: 0;
     min-height: unset;
     height: unset;
   }
@@ -157,8 +150,6 @@
     position: relative;
     left: 0;
     right: 0;
-    min-width: 100%;
-    max-width: 100%;
     box-shadow: unset;
     background-color: #26232e !important;
     background-size: contain !important;
@@ -217,7 +208,6 @@
 @media (max-width: 420px) {
   .sb-mobileAdWrapper .spotbie-ad-image,
   .spotbie-ad-image{
-    min-width: 100%;
     height: auto;
   }
 }
