--- a/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.css
+++ b/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.css
@@ -54,11 +54,7 @@
 .spotbie-ad-image{
     position: relative;
     margin: 0 auto;
-    min-width: 100%;
     height: auto;
-    background-repeat: no-repeat!important;
-    background-size: contain!important;
-    background-position: center!important;
 }
 .spotbie-white-iconImg{
     position: absolute;
@@ -108,9 +104,6 @@
     display: inline-block;
     max-width: 300px;
     min-width: 300px;
-    height: 400px;
-    max-height: 400px;
-    min-height: 400px;
     margin-left: 20px;
     margin-right: 20px;     
 }
